# Alimentador

./: CONFLITOS_CORRIGIDOS.md  Dockerfile  ERROS_CORRIGIDOS.md  EXPLICACAO_SIMPLES.md  LIMPEZA_CONCLUIDA.md  README.md  STATUS_FINAL.md  compose.yaml  desktop.ini  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agricultor/: apps.py
alimentador/: asgi.py  settings.py  urls.py  wsgi.py
backuptemplates/templates/alerts/: list.html
backuptemplates/templates/auth/: login.html
backuptemplates/templates/dashboard/: index.html
backuptemplates/templates/feeders/: list.html
backuptemplates/templates/reports/: index.html
compose/django/: start
inteligente/: admin.py  api.py  apps.py  context_processors.py  forms.py  log_utils.py  models.py  views.py
inteligente/management/commands/: populate_logs.py
inteligente/migrations/: 0001_initial.py  0002_alter_alert_options_remove_alert_feeder_name_and_more.py  0002_remove_alert_alert_id.py  0003_feeder_next_maintenance.py  0003_userprofile_created_by_admin.py  0004_userprofile_custom_executive_summary.py  0005_monthlyconsumption.py  0006_alter_feeder_capacity_alter_feeder_daily_consumption.py  0007_activitylog.py  0008_feedinglog_feeder_level_feedinglog_received_message_and_more.py
inteligente/static/css/: alerts.css  auth.css  landing_page.css  style.css
inteligente/templates/: base.html
inteligente/templates/alerts/: add.html  edit.html  list.html
inteligente/templates/alimentador/: alimentador.html
inteligente/templates/auth/: login.html  login_simple.html
(+15 files in other folders)
